@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="main">
-      <a class="title" href="http://www.gnome.org/projects/sabayon/">
+      <a class="title" href="http://www.gnome.org/~veillard/sabayon/">
         <div id="title">
           <h2>Sabayon</h2>
           <br />
