@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="main">
-      <a class="title" href="http://www.gnome.org/projects/sabayon/">
+      <a class="title" href="http://www.gnome.org/~veillard/sabayon/">
         <div id="title">
           <h2>Sabayon</h2>
           <br />
@@ -54,7 +54,8 @@
 	A big way to help out the Sabayon project is to get a package built for your distribution.  See your distribution guidelines for building a package and email the Sabayon mailing list to let us know.  We'll update this page with distributions as we know about them packaging sabayon.
 	</p>
           <strong>Sabayon Packages</strong>
-          <p><a href="http://fedora.redhat.com/">Fedora/Rawhide</a>, use this <a href="http://people.redhat.com/~markmc/sabayon/">Yum repository</a>.</p>
+          <p><a href="http://fedora.redhat.com/">Fedora/Rawhide</a>, use these <a href="http://people.redhat.com/~markmc/sabayon/">packages</a>.</p>
+	  <p>Patches for packaging sabayon for other systems are welcome.</p>
         </div>
         <br clear="all" />
       </div>
