@@ -3,20 +3,20 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en-US" xml:lang="en-US">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Sabayon  User profiles made simple</title>
+    <title>Sabayon User profiles made simple</title>
     <link rel="icon" type="image/png" href="images/sabayon-16.png" />
     <link rel="stylesheet" type="text/css" href="sabayon.css" />
   </head>
   <body>
     <div id="main" class="stripe">
-      <a class="title" href="http://www.gnome.org/projects/sabayon/">
-        <div id="title">
+      <div id="title">
+        <a class="title" href="http://www.gnome.org/~veillard/sabayon/">
           <h2>Sabayon</h2>
           <br />
           <br />
           <em>User profiles made simple</em>
-        </div>
-      </a>
+        </a>
+      </div>
       <div class="left">
         <div id="screenshot">
           <a href="http://www.gnome.org/~seth/blog/sabayon">
@@ -57,50 +57,47 @@ actually populating target system with those preferences.</p>
         </div>
       </div>
       <div class="right">
-      <div id="download">
-        <h2>Download</h2>
-        <p>
-	You should get Sabayon from your distribution, but if you can't find it there or are looking for the latest you might be able to get it here.
-	</p>
-        <h4>RPMs</h4>
-        <ul>
-          <li>Mark provides <a href="http://people.redhat.com/markmc/sabayon/">RPMs for Rawhide</a></li>
-        </ul>
-        <h4>Source</h4>
-        <ul>
-          <li>
-            <a href="http://people.redhat.com/markmc/sabayon/">tarball</a>
-          </li>
-          <li>
-            <a href="http://cvs.gnome.org/viewcvs/sabayon/">CVS Repository</a>
-          </li>
-        </ul>
-      </div>
-      <br clear="all" />
-      <div id="contribute">
-        <h2>Contribute</h2>
-        <p>
+        <div id="download">
+          <h2>Download</h2>
+          <h4>RPMs</h4>
+          <ul>
+            <li>Mark provides <a href="http://people.redhat.com/markmc/sabayon/">RPMs for Rawhide</a></li>
+          </ul>
+          <h4>Source</h4>
+          <ul>
+            <li>
+              <a href="http://people.redhat.com/markmc/sabayon/">tarball</a>
+            </li>
+            <li>
+              <a href="http://cvs.gnome.org/viewcvs/sabayon/">CVS Repository</a>
+            </li>
+          </ul>
+        </div>
+        <br clear="all" />
+        <div id="contribute">
+          <h2>Contribute</h2>
+          <p>
 	There are several ways to contribute to the Sabayon project.  
 	</p>
-        <p><a href="testing.html">Testing</a>, go here if you find a problem with any pdf or postscript files to report it.</p>
-        <p><a href="developing.html">Developing</a>, get the code and try to fix errors and send patches to the maintainers.</p>
-        <p><a href="helping.html">Helping out</a> on the <a href="http://mail.gnome.org/mailman/listinfo/sabayon-list/">mailing list</a> and <a href="irc://irc.gnome.org/sabayon">IRC</a> for people having problems, letting them know where to go and what to do.</p>
+          <p><a href="testing.html">Testing</a>, go here if you find a problem with any pdf or postscript files to report it.</p>
+          <p><a href="developing.html">Developing</a>, get the code and try to fix errors and send patches to the maintainers.</p>
+          <p><a href="helping.html">Helping out</a> on the <a href="http://mail.gnome.org/mailman/listinfo/sabayon-list/">mailing list</a> and <a href="irc://irc.gnome.org/sabayon">IRC</a> for people having problems, letting them know where to go and what to do.</p>
+        </div>
+        <br clear="all" />
+        <div id="contact">
+          <h2>Contact</h2>
+          <p>You can contact developers <a href="mailto:sabayon-list@gnome.org">sending a mail</a> to the <a href="http://mail.gnome.org/mailman/listinfo/sabayon-list/">Sabayon mailing list</a>. You do not need to be subscribed.</p>
+          <p>We are also often available to <a href="irc://irc.gnome.org/sabayon">chat on IRC</a>.</p>
+          <p><strong>Server:</strong> irc.gnome.org<br /><strong>Channel:</strong> #sabayon</p>
+        </div>
       </div>
       <br clear="all" />
-      <div id="contact">
-        <h2>Contact</h2>
-        <p>You can contact developers <a href="mailto:sabayon-list@gnome.org">sending a mail</a> to the <a href="http://mail.gnome.org/mailman/listinfo/sabayon-list/">Sabayon mailing list</a>. You do not need to be subscribed.</p>
-        <p>We are also often available to <a href="irc://irc.gnome.org/sabayon">chat on IRC</a>.</p>
-        <p><strong>Server:</strong> irc.gnome.org<br /><strong>Channel:</strong> #sabayon</p>
-      </div>
-    </div>
-    <br clear="all" />
-    <div class="bottom">
-      <div id="copyright"><script type="text/javascript"><![CDATA[
+      <div class="bottom">
+        <div id="copyright"><script type="text/javascript"><![CDATA[
    document.write("Last Updated: " + document.lastModified );
 ]]></script><br /><a href="http://validator.w3.org/check/referer">Optimised</a> for <a href="http://www.w3.org/">standards</a>.
       </div>
-    </div>
+      </div>
     </div>
   </body>
 </html>
