@@ -1,3 +1,8 @@
+Sun Feb 20 00:47:20 CET 2005 Daniel Veillard <veillard@redhat.com>
+
+	* doc/developing.html doc/helping.html doc/index.html: more fixes
+	  of links, etc. on the web site.
+
 Sun Feb 20 00:23:00 CET 2005 Daniel Veillard <veillard@redhat.com>
 
 	* TODO: small update
